package Bridge;

public class ConcreteImplementorB extends Implementor {
    @Override
    String OperationImp() {
        return "B";
    }
}
