package Bridge;

public class Implementor {
    String OperationImp() {
        return null;
    }
}
