package Bridge;

public class RefinedAbstraction extends Abstraction {
    @Override
    void Operation() {
        super.Operation();
    }
}
