@startuml

title __BRÝDGE's Class Diagram__\n

  namespace Bridge {
    class Bridge.Abstraction {
        ~ Operation()
    }
  }
  

  namespace Bridge {
    class Bridge.BridgeMain {
        {static} + main()
    }
  }
  

  namespace Bridge {
    class Bridge.ConcreteImplementorA {
        ~ OperationImp()
    }
  }
  

  namespace Bridge {
    class Bridge.ConcreteImplementorB {
        ~ OperationImp()
    }
  }
  

  namespace Bridge {
    class Bridge.Implementor {
        ~ OperationImp()
    }
  }
  

  namespace Bridge {
    class Bridge.RefinedAbstraction {
        ~ Operation()
    }
  }
  

  Bridge.Abstraction o-- Bridge.Implementor : imp
  Bridge.ConcreteImplementorA -up-|> Bridge.Implementor
  Bridge.ConcreteImplementorB -up-|> Bridge.Implementor
  Bridge.RefinedAbstraction -up-|> Bridge.Abstraction


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
